--- a/memory_game/index.html
+++ b/memory_game/index.html
@@ -2,7 +2,7 @@
 <head>
     <title>Memory Card Game</title>
     <link href="https://fonts.googleapis.com/css?family=Droid+Serif|Raleway:400,500,600,700" rel="stylesheet">
-    <link href="css/style.css/main.css" rel="stylesheet" type="text/css">
+    <link href="css/main.css" rel="stylesheet" type="text/css">
 
 </head>
 <body>
